--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,15 @@
-name: Test WorkFlow
+name: Publish WorkFlow
 
 on:
-  pull_request:
-    branches: [main]
+  release:
+    types: [created]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8]
     steps:
       - name: 🛎️ Checkout
         uses: actions/checkout@v3
@@ -23,8 +23,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ".[dev]"
-      - name: 🧹 Lint with flake8
+      - name: 🚀 Publish to PyPi
+        env: 
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PASSWORD }}
         run: |
-          make check_code_quality
-      - name: 🧪 Test
-        run: "python -m pytest ./test"
+          python setup.py sdist bdist_wheel
+          twine check dist/*
+          twine upload dist/*
