--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -3,6 +3,8 @@ on:
     types: [opened]
   pull_request_target:
     types: [opened]
+
+jobs:
   build:
     name: 👋 Welcome
     runs-on: ubuntu-latest
