--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,7 @@ dependencies = []
 
 [dependency-groups]
 dev = [
-    "flake8",
-    "black==22.3.0",
-    "isort",
+    "pre-commit",
     "twine",
     "pytest",
     "wheel",
