Add `codespell` pre-commit hook and fix typo in README

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,7 @@ repos:
     rev: v2.9.0
     hooks:
       - id: pyproject-fmt
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.4.1
+    hooks:
+      - id: codespell
