--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,31 +2,30 @@ name: Publish WorkFlow
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]
     steps:
       - name: 🛎️ Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v5
         with:
-          ref: ${{ github.head_ref }}
-      - name: 🐍 Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+          python-version: "3.10"
+          cache: "pip"
+      - name: 🦾 Install build dependencies
+        run: |
+          python -m pip install --upgrade pip build
+      - name: 📦 Build package
+        run: python -m build
+      - name: Upload to release
+        uses: AButler/upload-release-assets@v3.0
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: 🦾 Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ".[dev]"
-      - name: 🚀 Publish to PyPi
-        env:
-          PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-          PYPI_TEST_PASSWORD: ${{ secrets.PYPI_TEST_PASSWORD }}
-        run: |
-          make publish -e PYPI_USERNAME=$PYPI_USERNAME -e PYPI_PASSWORD=$PYPI_PASSWORD -e PYPI_TEST_PASSWORD=$PYPI_TEST_PASSWORD
+          files: "dist/*"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🚀 Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@v1.1.0
+        with:
+          password: ${{ secrets.PYPI_PASSWORD }}
