--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,22 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
       - name: 🛎️ Checkout
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.head_ref }}
+        uses: actions/checkout@v4
       - name: 🐍 Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: 🔧 Set up uv
+        uses: astral-sh/setup-uv@v5
       - name: 🦾 Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ".[dev]"
-      - name: 🧹 Lint with flake8
-        run: |
-          make check_code_quality
+        run: uv sync --dev
       - name: 🧪 Test
-        run: "python -m pytest ./test"
+        run: uv run pytest test/
