Update formatting rules, expand pre-commit hooks, and refine test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
       - name: 🦾 Install dependencies
         run: uv sync --dev
       - name: 🧪 Test
-        run: uv run pytest test/
+        run: uv run pytest test/ src/
